Fix input background being clipped on hover

--- a/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
@@ -17,6 +17,11 @@
   border-radius: $br-8;
   cursor: pointer;
 
+  background: transparent;
+  &:hover {
+    background: transparent;
+  }
+
   .dropdown-button {
     @include flexCenter;
     margin-right: -$s-8;
